add config file

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Ecomm with MERN",
   "license": "ISC",
   "author": "Venkateswarlu Koppoku",
-  "type": "commonjs",
+  "type": "module",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
