--- a/package.json
+++ b/package.json
@@ -7,11 +7,16 @@
   "type": "module",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node backend/app.js",
+    "dev": "SET NODE_ENV=DEV & nodemon backend/app.js",
+    "prod": "SET NODE_ENV=PROD & nodemon backend/app.js"
   },
   "dependencies": {
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "mongoose": "^8.17.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
