add mongo db db connection

--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   "main": "app.js",
   "scripts": {
     "start": "node backend/app.js",
-    "dev": "SET NODE_ENV=DEV & nodemon backend/app.js",
-    "prod": "SET NODE_ENV=PROD & nodemon backend/app.js"
+    "dev": "nodemon backend/app.js",
+    "prod": "nodemon backend/app.js"
   },
   "dependencies": {
     "dotenv": "^17.2.1",
