--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "start": "node backend/app.js",
     "dev": "nodemon backend/app.js",
-    "prod": "nodemon backend/app.js"
+    "prod": "node backend/app.js",
+    "seed": "node backend/seeder/seeder.js"
   },
   "dependencies": {
     "dotenv": "^17.2.1",
