--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "seed": "node backend/seeder/seeder.js"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "mongoose": "^8.17.1"
