--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -5,3 +5,11 @@ DB_PROD_URI=
 JWT_SECRETE=SDFFW!@#$DDRR5445sdf
 JWT_EXPIRES=7d
 COOKIE_EXPIRES=7
+
+SMTP_HOST=sandbox.smtp.mailtrap.io
+SMTP_PORT=2525
+SMTP_USER=d24c194db495d3
+SMTP_PSD=17f9f8809d80de
+
+SMTP_FROM_NAME=ecomm
+SMTP_FROM_TO=noreply@gmail.com
