--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -1,5 +1,6 @@
 PORT=3000
 NODE_ENV=DEV
+FRONT_END_URL=localhost:3000
 DB_DEV_URI=mongodb://127.0.0.1:27017/ecomm
 DB_PROD_URI=
 JWT_SECRETE=SDFFW!@#$DDRR5445sdf
