--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@dr.pogodin/react-helmet": "^3.0.2",
     "@reduxjs/toolkit": "^2.8.2",
+    "@smastrom/react-rating": "^1.5.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-redux": "^9.2.0",
