upload avatar api and page crweating

--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -14,3 +14,7 @@ SMTP_PSD=17f9f8809d80de
 
 SMTP_FROM_NAME=ecomm
 SMTP_FROM_TO=noreply@gmail.com
+
+CLOUDINARY_API_NAME=dkitclmok
+CLOUDINARY_API_KEY=415967812671129
+CLOUDINARY_API_SECRET=PhBCQXJY2YVOs2qI8V40O8DLJUA
