--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@dr.pogodin/react-helmet": "^3.0.2",
     "@reduxjs/toolkit": "^2.8.2",
     "@smastrom/react-rating": "^1.5.0",
+    "countries-list": "^3.1.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hot-toast": "^2.6.0",
